# project

./: .gitignore
Amazing_charts_sample_program/: Amazing_charts_sample_program.7z  Amazing_charts_sample_program.sln  New Package.dtsx  a_z_09-16-1978_5-2-2018_3-25-40_PM.txt  b_b_12-10-2017_5-2-2018_6-15-15_PM.txt  ddddddd_zzzzzzz_04-04-2018_5-2-2018_1-10-51_PM.txt  logFile.txt  q_a_09-16-1978_5-2-2018_6-33-37_PM.txt
Amazing_charts_sample_program_wpf/: Amazing_charts_sample_program_wpf.7z  Amazing_charts_sample_program_wpf.sln  logFile.txt
C#/: VISIO - Shortcut.lnk
C++/: devenv - Shortcut.lnk
Ems_Final_Source(php)/: add_videographer.php  enrolldetails.php  reorder.php  viewreorder.php
Mysql final_project/: rental.js  video.html
Qt/: AlternativeAnalysisNoESS.cpp  BThread.h  CostNoESS.cpp  DbConnector.cpp  EmuThread.h  MessagesType.h  ProcessRequest.h  SessionHandler.cpp  SessionHandler.h  SessionsDb.h  costThread.cpp
Sample Game/: ArcherJob.ctxt  Board.java  Character.ctxt  HealerJob.ctxt  StartGame.java  ThiefJob.java  Tile.ctxt
Software Testing csci 415/: Essay.docx  RIC Project 1 Test Case Specification Template.xls  essay 4.docx  essay 5.docx  essay 6.docx  essay 7.docx  essay2.docx  essay3.docx  home work Bad words (Autosaved).docx  ~$me work Bad words.docx
assignment4/: package.json
nodejs/IRENA/esCalculator/: CMakeLists.txt  Makefile
nodejs/IRENA/esCalculator/include/: esCalculator.h  rtGetInf.h
nodejs/IRENA/esCalculator/src/: Makefile  cmake_install.cmake  esCalculator.c  esCalculator_initialize.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
(+3309 files in other folders)
